# veri-py

./: .gitignore  AGENTS.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish-pypi.yml
src/veri_py/: __init__.py  client.py  exceptions.py  models.py
src/veri_py/core/: __init__.py  config.py  http.py  playwright_proxy.py
src/veri_py/parsers/: __init__.py  common.py  pdf.py  telebirr.py
src/veri_py/services/: __init__.py  abyssinia.py  cbe.py  cbebirr.py  dashen.py  image.py  mpesa.py  telebirr.py
tests/: test_client_settings.py  test_parsers.py  test_playwright_proxy.py  test_settings.py
