[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "veri-py"
version = "0.1.0"
description = "Typed Python toolkit for Ethiopian payment receipt verification (CBE, Telebirr, Dashen, Abyssinia, CBE Birr, M-Pesa)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Nahom D" }]
keywords = ["ethiopia", "payment", "verification", "receipt", "cbe", "telebirr", "mpesa"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "openai>=1.59.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.10.1",
    "pypdf>=5.4.0",
    "beautifulsoup4>=4.13.4",
]

[project.urls]
Homepage = "https://github.com/Vixen878/verifier-api/tree/main/veri-py"
Repository = "https://github.com/Vixen878/verifier-api"
Documentation = "https://github.com/Vixen878/verifier-api/tree/main/veri-py"

[project.optional-dependencies]
browser = [
    "playwright>=1.54.0",
]
ocr = [
    "pillow>=11.0.0",
]
socks = [
    "httpx[socks]>=0.28.1",
]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "respx>=0.22.0",
    "mypy>=1.18.1",
    "ruff>=0.11.13",
    "build>=1.2.0",
    "twine>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/veri_py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 180
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N"]
ignore = ["N815"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
pretty = true
ignore_missing_imports = true
exclude = [".venv/"]
